--- a/index.html
+++ b/index.html
@@ -46,27 +46,34 @@
         </div>
 
     </div>
-
     <div class="main-container">
         <h2>Ключові переваги:</h2>
         <div class="info">
-            <img src="./images/info-icon-1.svg" alt="">
-            <h4>Швидко і зручно</h4>
+            <div class="info-title">
+                <img src="./images/info-icon-1.svg" alt="">
+                <h4>Швидко і зручно</h4>
+            </div>
             <p>Відкриття рахунку за 15 хвилин онлайн</p>
         </div>
         <div class="info">
-            <img src="/images/info-icon-2.svg" alt="">
-            <h4>Вигідні тарифи</h4>
+            <div class="info-title">
+                <img src="/images/info-icon-2.svg" alt="">
+                <h4>Вигідні тарифи</h4>
+            </div>
             <p>Мінімальні комісії та високі відсотки по депозитах</p>
         </div>
         <div class="info">
-            <img src="./images/info-icon-3.svg" alt="">
-            <h4>24/7 підтримка</h4>
+            <div class="info-title">
+                <img src="./images/info-icon-3.svg" alt="">
+                <h4>24/7 підтримка</h4>
+            </div>
             <p>Цілодобова підтримка клієнтів</p>
         </div>
         <div class="info">
-            <img src="/images/info-icon-4.svg" alt="">
-            <h4>Безпека</h4>
+            <div class="info-title">
+                <img src="/images/info-icon-4.svg" alt="">
+                <h4>Безпека</h4>
+            </div>
             <p>Надійний захист коштів та даних</p>
         </div>
     </div>
