--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             <p>Надійний захист коштів та даних</p>
         </div>
     </div>
+        <img id="decoration-1" src="./images/safe.png" alt="">
 </body>
 
 </html>
