--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="header-button" id="headButt"><a href="#">Дізнатися більше</a></div>
             </div>
             <div class="header-img-statistics">
-                <img src="./images/statistyc.png" alt="">
+                <img src="./images/statistyc.svg" alt="">
             </div>
             <hr id="hr-header-2">
         </div>
