--- a/index.html
+++ b/index.html
@@ -435,10 +435,8 @@
             </div>
 
         </div>
-
-
     </div>
-
+    <img id="decoration-2" src="./images/bitkoin.svg" alt="">
     </div>
     </div>
 </body>
