--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
                 <div class="card">
                     <div class="card-header">
                         <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
-                            <h6>💵 Для бізнесу</h6>
+                            <h6>💵 ДЛЯ БІЗНЕСУ</h6>
                         </a>
                     </div>
                     <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
                         <div class="card-header">
-                            <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
+                            <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Корпоративні рахунки:</h6>
                             </a>
                         </div>
@@ -132,7 +132,7 @@
                     </div>
                     <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
                         <div class="card-header">
-                            <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
+                            <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Бізнес-кредитування:</h6>
                             </a>
                         </div>
@@ -149,7 +149,7 @@
 
                     <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
                         <div class="card-header">
-                            <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
+                            <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Еквайринг:</h6>
                             </a>
                         </div>
@@ -166,7 +166,7 @@
                     </div>
                     <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
                         <div class="card-header">
-                            <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
+                            <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Для приватних клієнтів:
                                     Депозити:</h6>
                             </a>
@@ -185,7 +185,7 @@
                     </div>
                     <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
                         <div class="card-header">
-                            <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
+                            <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Споживчі кредити:</h6>
                             </a>
                         </div>
@@ -212,7 +212,7 @@
                     </div>
                     <div id="collapseTwo" class="collapse show" data-bs-parent="#accordion">
                         <div class="card-header">
-                            <a class="btn" data-bs-toggle="collapse" href="#collapseTwo">
+                            <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Обмін валют:</h6>
                             </a>
                         </div>
@@ -227,7 +227,7 @@
                     </div>
                     <div id="collapseTwo" class="collapse show" data-bs-parent="#accordion">
                         <div class="card-header">
-                            <a class="btn" data-bs-toggle="collapse" href="#collapseTwo">
+                            <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Міжнародні перекази:</h6>
                             </a>
                         </div>
@@ -247,13 +247,13 @@
 
             <div class="card">
                 <div class="card-header">
-                    <a class="btn" data-bs-toggle="collapse" href="#collapseThree">
+                    <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">
                         <h6>📱 ЦИФРОВІ ПОСЛУГИ</h6>
                     </a>
                 </div>
                 <div id="collapseThree" class="collapse show" data-bs-parent="#accordion">
                     <div class="card-header">
-                        <a class="btn" data-bs-toggle="collapse" href="#collapseThree">
+                        <a class="btn" data-bs-toggle="collapse" href="#">
                             <h6>Мобільний банкінг "BT Mobile":</h6>
                         </a>
                     </div>
@@ -269,7 +269,7 @@
                 </div>
                 <div id="collapseThree" class="collapse show" data-bs-parent="#accordion">
                     <div class="card-header">
-                        <a class="btn" data-bs-toggle="collapse" href="#collapseThree">
+                        <a class="btn" data-bs-toggle="collapse" href="#">
                             <h6>Інтернет-банкінг:</h6>
                         </a>
                     </div>
@@ -286,7 +286,7 @@
 
                 <div id="collapseThree" class="collapse show" data-bs-parent="#accordion">
                     <div class="card-header">
-                        <a class="btn" data-bs-toggle="collapse" href="#collapseThree">
+                        <a class="btn" data-bs-toggle="collapse" href="#">
                             <h6>Еквайринг:</h6>
                         </a>
                     </div>
@@ -303,7 +303,7 @@
                 </div>
                 <div id="collapseThree" class="collapse show" data-bs-parent="#accordion">
                     <div class="card-header">
-                        <a class="btn" data-bs-toggle="collapse" href="#collapseThree">
+                        <a class="btn" data-bs-toggle="collapse" href="#">
                             <h6>Для приватних клієнтів:
                                 Депозити:</h6>
                         </a>
@@ -322,7 +322,7 @@
                 </div>
                 <div id="collapseThree" class="collapse show" data-bs-parent="#accordion">
                     <div class="card-header">
-                        <a class="btn" data-bs-toggle="collapse" href="#collapseThree">
+                        <a class="btn" data-bs-toggle="collapse" href="#">
                             <h6>Споживчі кредити:</h6>
                         </a>
                     </div>
@@ -343,13 +343,13 @@
 
             <div class="card">
                 <div class="card-header">
-                    <a class="btn" data-bs-toggle="collapse" href="#collapseFour">
+                    <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseFour">
                         <h6>🛡️ БЕЗПЕКА ТА ГАРАНТІЇ</h6>
                     </a>
                 </div>
                 <div id="collapseFour" class="collapse show" data-bs-parent="#accordion">
                     <div class="card-header">
-                        <a class="btn" data-bs-toggle="collapse" href="#collapseFour">
+                        <a class="btn" data-bs-toggle="collapse" href="#">
                             <h6>Захист коштів:</h6>
                         </a>
                     </div>
@@ -365,7 +365,7 @@
                 </div>
                 <div id="collapseFour" class="collapse show" data-bs-parent="#accordion">
                     <div class="card-header">
-                        <a class="btn" data-bs-toggle="collapse" href="#collapseFour">
+                        <a class="btn" data-bs-toggle="collapse" href="#">
                             <h6>Сертифікати та ліцензії:</h6>
                         </a>
                     </div>
@@ -382,7 +382,7 @@
 
                 <div id="collapseFour" class="collapse show" data-bs-parent="#accordion">
                     <div class="card-header">
-                        <a class="btn" data-bs-toggle="collapse" href="#collapseFour">
+                        <a class="btn" data-bs-toggle="collapse" href="#">
                             <h6>Еквайринг:</h6>
                         </a>
                     </div>
@@ -399,7 +399,7 @@
                 </div>
                 <div id="collapseFour" class="collapse show" data-bs-parent="#accordion">
                     <div class="card-header">
-                        <a class="btn" data-bs-toggle="collapse" href="#collapseFour">
+                        <a class="btn" data-bs-toggle="collapse" href="#">
                             <h6>Для приватних клієнтів:
                                 Депозити:</h6>
                         </a>
@@ -418,7 +418,7 @@
                 </div>
                 <div id="collapseFour" class="collapse show" data-bs-parent="#accordion">
                     <div class="card-header">
-                        <a class="btn" data-bs-toggle="collapse" href="#collapseFour">
+                        <a class="btn" data-bs-toggle="collapse" href="#">
                             <h6>Споживчі кредити:</h6>
                         </a>
                     </div>
