--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 <ul>
                     <li><a href="./index.html">Головна</a></li>
                     <li><a href="#services">Послуги</a></li>
-                    <li><a href="#aboutUs">Про банк</a></li>
+                    <li><a href="#aboutBank">Про банк</a></li>
+                    <li><a href="#contacts">Контакти</a></li>
                     <li><a href="#">Тарифи</a></li>
                     <li><a href="#">Конвертор валют</a></li>
-                    <li><a href="#">Контакти</a></li>
                 </ul>
             </nav>
             <script>
@@ -104,7 +104,8 @@
     <img id="decoration-1" src="./images/safe.png" alt="">
 
     <div class="main-body">
-        <section id="services">
+        <section id="services" style="
+  scroll-margin-top: 90px;">
             <h2>💼 ПОСЛУГИ:</h2>
             <div id="accordion">
 
@@ -437,23 +438,28 @@
             </div>
         </section>
 
-        <section id="aboutBank">
+        <section id="aboutBank" style="
+  scroll-margin-top: 90px;">
             <h2>📊 ПРО БАНК</h2>
             <h4>Наша історія:</h4>
-            Business Team Bank заснований у 2008 році групою досвідчених фінансистів з метою надання якісних банківських
-            послуг малому та середньому бізнесу. За 15+ років роботи ми стали надійним партнером для понад 50 000
-            клієнтів по всій Україні.
+            <p>Business Team Bank заснований у 2008 році групою досвідчених фінансистів з метою надання якісних
+                банківських
+                послуг малому та середньому бізнесу. За 15+ років роботи ми стали надійним партнером для понад 50 000
+                клієнтів по всій Україні.</p>
             <h5>Місія:</h5> Робити фінансові послуги простими, доступними та вигідними для кожного клієнта.
             <h6>Цінності:</h6>
 
+            <p>
             <ul>
                 <li>Прозорість у всіх операціях</li>
                 <li>Індивідуальний підхід до кожного клієнта</li>
                 <li>Постійні інновації та розвиток</li>
                 <li>Соціальна відповідальність</li>
             </ul>
+            </p>
 
             <h6>Ключові показники:</h6>
+            <p></p>
             <ul>
                 <li>15+ років успішної роботи</li>
                 <li>50 000+ задоволених клієнтів</li>
@@ -461,6 +467,46 @@
                 <li>99.9% надійність IT-систем</li>
                 <li>ТОП-15 банків України за розміром активів</li>
             </ul>
+
+        </section>
+
+        <section id="contacts">
+            <h2>📞 КОНТАКТИ</h2>
+            <p><strong> Головний офіс:</strong>
+                <a href="https://maps.app.goo.gl/n7zHLNdQKsagpdU39">вул. Хрещатик, 25, м. Київ, 01001</a>
+            </p><br><br>
+            <iframe id="map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2884.945969482389!2d30.522732900244083!3d50.44352496003494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce55d0276e59%3A0xb03fd0a90c6de69a!2z0LLRg9C70LjRhtGPINCl0YDQtdGJ0LDRgtC40LosIDI1LCDQmtC40ZfQsiwg0KPQutGA0LDRl9C90LAsIDAxMDAx!5e1!3m2!1suk!2sde!4v1748615120226!5m2!1suk!2sde"
+                 style="border: 1px solid #fff; border-radius: 20px;" allowfullscreen=""
+                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            <p><strong>Гаряча лінія:</strong>
+            <ul>
+                <li><a href="tel:800 500 500">800 500 500 </a> (безкоштовно по Україні)</li>
+                <li><a href="tel:38 (044) 123-45-67">38 (044) 123-45-67</a>(для дзвінків з-за кордону)</li>
+            </ul>
+            </p>
+
+
+
+
+            <p><strong>Email:</strong>
+            <ul>
+                <li><a href="mailto:info@businessteambank.ua">info@businessteambank.ua</a> (загальні питання)</li>
+                <li><a href="mailto:support@businessteambank.ua">support@businessteambank.ua</a> (технічна підтримка)
+                </li>
+                <li><a href="mailto:business@businessteambank.ua">business@businessteambank.ua</a> (корпоративні
+                    клієнти)</li>
+            </ul>
+            </p>
+
+            <p><strong>Режим роботи:</strong>
+            <ul>
+                <li><strong>Відділення:</strong> <br>Пн-Пт 9:00-18:00,<br> Сб 10:00-16:00</li>
+                <li><strong>Кол-центр:</strong> <br>24/7</li>
+                <li><strong>Онлайн-банкінг:</strong><br> 24/7</li>
+            </ul>
+            </p>
 
         </section>
     </div>
