--- a/index.html
+++ b/index.html
@@ -103,9 +103,12 @@
 
     <img id="decoration-1" src="./images/safe.png" alt="">
 
+
+    <img src="./images/jonathan-cooper-0O2Pp6-mOkY-unsplash.png" alt="" style="width: 100%;">
     <div class="main-body">
         <section id="services" style="
   scroll-margin-top: 90px;">
+
             <h2>💼 ПОСЛУГИ:</h2>
             <div id="accordion">
 
@@ -211,7 +214,7 @@
                             <h6>💱 ВАЛЮТНІ ОПЕРАЦІЇ</h6>
                         </a>
                     </div>
-                    <div id="collapseTwo" class="collapse show" data-bs-parent="#accordion">
+                    <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
                         <div class="card-header">
                             <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Обмін валют:</h6>
@@ -226,7 +229,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div id="collapseTwo" class="collapse show" data-bs-parent="#accordion">
+                    <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
                         <div class="card-header">
                             <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Міжнародні перекази:</h6>
@@ -250,7 +253,7 @@
                             <h6>📱 ЦИФРОВІ ПОСЛУГИ</h6>
                         </a>
                     </div>
-                    <div id="collapseThree" class="collapse show" data-bs-parent="#accordion">
+                    <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
                         <div class="card-header">
                             <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Мобільний банкінг "BT Mobile":</h6>
@@ -266,7 +269,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div id="collapseThree" class="collapse show" data-bs-parent="#accordion">
+                    <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
                         <div class="card-header">
                             <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Інтернет-банкінг:</h6>
@@ -283,7 +286,7 @@
                         </div>
                     </div>
 
-                    <div id="collapseThree" class="collapse show" data-bs-parent="#accordion">
+                    <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
                         <div class="card-header">
                             <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Еквайринг:</h6>
@@ -300,7 +303,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div id="collapseThree" class="collapse show" data-bs-parent="#accordion">
+                    <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
                         <div class="card-header">
                             <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Для приватних клієнтів:
@@ -319,7 +322,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div id="collapseThree" class="collapse show" data-bs-parent="#accordion">
+                    <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
                         <div class="card-header">
                             <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Споживчі кредити:</h6>
@@ -346,7 +349,7 @@
                             <h6>🛡️ БЕЗПЕКА ТА ГАРАНТІЇ</h6>
                         </a>
                     </div>
-                    <div id="collapseFour" class="collapse show" data-bs-parent="#accordion">
+                    <div id="collapseFour" class="collapse" data-bs-parent="#accordion">
                         <div class="card-header">
                             <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Захист коштів:</h6>
@@ -362,7 +365,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div id="collapseFour" class="collapse show" data-bs-parent="#accordion">
+                    <div id="collapseFour" class="collapse" data-bs-parent="#accordion">
                         <div class="card-header">
                             <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Сертифікати та ліцензії:</h6>
@@ -379,7 +382,7 @@
                         </div>
                     </div>
 
-                    <div id="collapseFour" class="collapse show" data-bs-parent="#accordion">
+                    <div id="collapseFour" class="collapse" data-bs-parent="#accordion">
                         <div class="card-header">
                             <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Еквайринг:</h6>
@@ -396,7 +399,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div id="collapseFour" class="collapse show" data-bs-parent="#accordion">
+                    <div id="collapseFour" class="collapse" data-bs-parent="#accordion">
                         <div class="card-header">
                             <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Для приватних клієнтів:
@@ -415,7 +418,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div id="collapseFour" class="collapse show" data-bs-parent="#accordion">
+                    <div id="collapseFour" class="collapse" data-bs-parent="#accordion">
                         <div class="card-header">
                             <a class="btn" data-bs-toggle="collapse" href="#">
                                 <h6>Споживчі кредити:</h6>
@@ -437,7 +440,10 @@
                 </div>
             </div>
         </section>
+    </div>
 
+    <!-- <img src="./images/sandie-clarke-FDoY8KI7VMU-unsplash.jpg" alt="" width="100%"> -->
+    <div class="main-body">
         <section id="aboutBank" style="
   scroll-margin-top: 90px;">
             <h2>📊 ПРО БАНК</h2>
@@ -469,17 +475,20 @@
             </ul>
 
         </section>
+    </div>
 
+    <img src="./images/melinda-gimpel-5Ne6mMQtIdo-unsplash-2.jpg" alt="" width="100%">
+    <div class="main-body">
         <section id="contacts">
             <h2>📞 КОНТАКТИ</h2>
+
             <p><strong> Головний офіс:</strong>
                 <a href="https://maps.app.goo.gl/n7zHLNdQKsagpdU39">вул. Хрещатик, 25, м. Київ, 01001</a>
             </p><br><br>
             <iframe id="map"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2884.945969482389!2d30.522732900244083!3d50.44352496003494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce55d0276e59%3A0xb03fd0a90c6de69a!2z0LLRg9C70LjRhtGPINCl0YDQtdGJ0LDRgtC40LosIDI1LCDQmtC40ZfQsiwg0KPQutGA0LDRl9C90LAsIDAxMDAx!5e1!3m2!1suk!2sde!4v1748615120226!5m2!1suk!2sde"
-                 style="border: 1px solid #fff; border-radius: 20px;" allowfullscreen=""
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.8235587002114!2d30.520241976905552!3d50.44438707159108!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce55d0276e59%3A0xb03fd0a90c6de69a!2z0LLRg9C70LjRhtGPINCl0YDQtdGJ0LDRgtC40LosIDI1LCDQmtC40ZfQsiwg0KPQutGA0LDRl9C90LAsIDAxMDAx!5e0!3m2!1suk!2sde!4v1748852065044!5m2!1suk!2sde"
+                width="900" height="600" style="border: 1px solid #fff; border-radius: 20px;" allowfullscreen=""
                 loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
             <p><strong>Гаряча лінія:</strong>
             <ul>
                 <li><a href="tel:800 500 500">800 500 500 </a> (безкоштовно по Україні)</li>
@@ -511,8 +520,6 @@
         </section>
     </div>
     <img id="decoration-2" src="./images/bitkoinGroup.svg" alt="">
-    </div>
-    </div>
 </body>
 
 </html>
