--- a/contacts.html
+++ b/contacts.html
@@ -53,10 +53,14 @@
         </script>
     </div>
 
+    <div class="header-box-2">
+        <h2>📞 КОНТАКТИ</h2>
+    </div>
+
 
     <div class="main-body">
         <section id="contacts">
-            <h2>📞 КОНТАКТИ</h2>
+            
             <p><strong>Гаряча лінія:</strong>
             <ul>
                 <li><a href="tel:800 500 500">800 500 500 </a> (безкоштовно по Україні)</li>
