--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     <li><a href="./services.html">Послуги</a></li>
                     <li><a href="./aboutBank.html">Про банк</a></li>
                     <li><a href="./contacts">Контакти</a></li>
-                    <li><a href="#">Тарифи</a></li>
-                    <li><a href="#">Конвертор валют</a></li>
+                    <li><a href="./tarif.html">Тарифи</a></li>
+                    <li><a href="./convertor.html">Конвертор валют</a></li>
                 </ul>
             </nav>
             <script>
@@ -103,6 +103,10 @@
 
     <img id="decoration-1" src="./images/safe.png" alt="">
     <img id="decoration-2" src="./images/bitkoinGroup.svg" alt="">
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
