--- a/tarif.html
+++ b/tarif.html
@@ -47,7 +47,7 @@
         background: #222;
         border-color: #333;
     }
-    
+
     .btn:hover {
         background: #222222a2;
         border-color: #3333333f;
@@ -55,11 +55,45 @@
 
     .btn-2 {
         background: #00000000;
-        text-decoration: none;  
+        text-decoration: none;
         color: #000;
     }
 
+    #tarif h3 {
+        text-align: center;
+    }
 
+    .header-box-5 {
+        background-image: url(./images/for-tarif.png);
+        width: 100%;
+        height: 880px;
+        flex-direction: column;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .header-box-5 h2 {
+        width: auto;
+        max-width: 700px;
+        max-height: 140px;
+        height: auto;
+        font-size: 64px;
+        line-height: 60px;
+    }
+
+    .header-box-5 p {
+        width: auto;
+        max-width: 330px;
+        max-height: 140px;
+        margin-top: 20px;
+        height: auto;
+        font-size: 24px;
+        font-weight: 300;
+        line-height: 30px;
+        position: relative;
+        right: 180px;
+    }
 </style>
 
 <body>
