--- a/aboutBank.html
+++ b/aboutBank.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="animation.css">
-    <link rel="stylesheet" href="style.css">
+    <link id="path" rel="stylesheet" href="style-light.css">
     <title>Business Team Bank</title>
 </head>
 
@@ -32,16 +32,21 @@
             <span></span>
         </div>
 
-        <nav id="nav-menu">
-            <ul>
-                <li><a href="./index.html">Головна</a></li>
-                <li><a href="./services.html">Послуги</a></li>
-                <li><a href="./aboutBank.html">Про банк</a></li>
-                <li><a href="./contacts">Контакти</a></li>
-                <li><a href="./tarif.html">Тарифи</a></li>
-                <li><a href="./convertor.html">Конвертор валют</a></li>
-            </ul>
-        </nav>
+            <nav id="nav-menu">
+                <ul>
+                    <li><a href="./index.html">Головна</a></li>
+                    <li><a href="./services.html">Послуги</a></li>
+                    <li><a href="./aboutBank.html">Про банк</a></li>
+                    <li><a href="./contacts">Контакти</a></li>
+                    <li><a href="./tarif.html">Тарифи</a></li>
+                    <li><a href="./convertor.html">Конвертор валют</a></li>
+                </ul>
+                <label class="switch">
+                    <input type="checkbox" id="themeToggle" onclick="changeCSS()" />
+                    <span class="slider"></span>
+                </label>
+                <script src="script.js"></script>
+            </nav>
         <script>
             const burger = document.getElementById('burger');
             const navMenu = document.getElementById('nav-menu');
