--- a/convertor.html
+++ b/convertor.html
@@ -2,12 +2,40 @@
 <html lang="uk">
 
 <head>
-    <meta charset="UTF-8" />
-    <title>Конвертор валюти</title>
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./images/game-icons_piggy-bank.svg" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="animation.css">
+    <link id="path" rel="stylesheet" href="style-light.css">
+
+    <head>
+        <meta charset="UTF-8" />
+        <title>Конвертор валюти</title>
+    </head>
 
 <body>
-
+    <nav id="nav-menu">
+        <ul>
+            <li><a href="./index.html">Головна</a></li>
+            <li><a href="./services.html">Послуги</a></li>
+            <li><a href="./aboutBank.html">Про банк</a></li>
+            <li><a href="./contacts">Контакти</a></li>
+            <li><a href="./tarif.html">Тарифи</a></li>
+            <li><a href="./convertor.html">Конвертор валют</a></li>
+        </ul>
+        <label class="switch">
+            <input type="checkbox" id="themeToggle" onclick="changeCSS()" />
+            <span class="slider"></span>
+        </label>
+        <script src="script.js"></script>
+    </nav>
     <h2>Конвертор валюти (Варіант 2)</h2>
 
     <label>Долари:</label>
