--- a/index.html
+++ b/index.html
@@ -13,83 +13,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="animation.css">
-    <link rel="stylesheet" href="style.css">
+    <link id="path" rel="stylesheet" href="style-light.css">
+
     <title>Business Team Bank</title>
-    <!-- <style>
-        .footer {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            background-color: #dddddd;
-            color: #222;
-            padding: 40px 20px;
-            font-family: 'Segoe UI', sans-serif;
-            gap: 30px;
-        }
-
-        .footer-column {
-            flex: 1 1 250px;
-            min-width: 220px;
-            max-width: 300px;
-        }
-
-        .footer-column h4 {
-            font-size: 18px;
-            margin-bottom: 10px;
-            color: #000000;
-        }
-
-        .footer-column h6 {
-            font-size: 16px;
-            margin: 15px 0 5px;
-            color: #e0e1dd;
-        }
-
-        .footer-column ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .footer-column ul li {
-            margin-bottom: 6px;
-            font-size: 14px;
-            color: #d9d9d9;
-            transition: color 0.3s;
-        }
-
-        .footer-column ul li:hover {
-            color: #fca311;
-            cursor: pointer;
-        }
-
-        .footer-column p {
-            font-size: 14px;
-            line-height: 1.6;
-        }
-
-        footer ul li a {
-            text-decoration: none;
-            color: #555;
-            transition: 0.2s;
-        }
-
-        footer ul li a:hover {
-            color: #1f0091;
-        }
-
-
-        @media (max-width: 768px) {
-            .footer {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-
-            .footer-column {
-                width: 100%;
-            }
-        }
-    </style> -->
     <style>
         #calendar {
             width: 100%;
@@ -126,6 +52,53 @@
             height: 30px;
             line-height: 30px;
         }
+
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
+            top: 45px;
+            margin-left: 20px;
+        }
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            transition: 0.4s;
+            border-radius: 34px;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            transition: 0.4s;
+            border-radius: 50%;
+        }
+
+        input:checked+.slider {
+            /* background-color: #1f1f1f; */
+        }
+
+        input:checked+.slider:before {
+            transform: translateX(26px);
+        }
     </style>
 </head>
 
@@ -155,7 +128,13 @@
                     <li><a href="./tarif.html">Тарифи</a></li>
                     <li><a href="./convertor.html">Конвертор валют</a></li>
                 </ul>
+                <label class="switch">
+                    <input type="checkbox" id="themeToggle" onclick="changeCSS()" />
+                    <span class="slider"></span>
+                </label>
+                <script src="script.js"></script>
             </nav>
+
             <script>
                 const burger = document.getElementById('burger');
                 const navMenu = document.getElementById('nav-menu');
@@ -175,7 +154,7 @@
                 <div class="header-button" id="headButt"><a href="#">Дізнатися більше</a></div>
             </div>
             <div class="header-img-statistics">
-                <img src="./images/statistyc.svg" alt="">
+                <!-- <img src="./images/statistyc.svg" alt=""> -->
             </div>
             <hr id="hr-header-2">
         </div>
@@ -214,7 +193,7 @@
     </div>
     <div class="main-body">
         <section id="calendar-section">
-            <h2>Календар</h2>
+            <h2>Робочі дні</h2>
             <div id="calendar"></div>
             <div id="dayTypeMessage"></div>
             <script>
