new img for theme

--- a/convertor.html
+++ b/convertor.html
@@ -22,20 +22,21 @@
 
 <body>
     <nav id="nav-menu">
-        <ul>
-            <li><a href="./index.html">Головна</a></li>
-            <li><a href="./services.html">Послуги</a></li>
-            <li><a href="./aboutBank.html">Про банк</a></li>
-            <li><a href="./contacts">Контакти</a></li>
-            <li><a href="./tarif.html">Тарифи</a></li>
-            <li><a href="./convertor.html">Конвертор валют</a></li>
-        </ul>
-        <label class="switch">
-            <input type="checkbox" id="themeToggle" onclick="changeCSS()" />
-            <span class="slider"></span>
-        </label>
-        <script src="script.js"></script>
-    </nav>
+                <ul>
+                    <li><a href="./index.html">Головна</a></li>
+                    <li><a href="./services.html">Послуги</a></li>
+                    <li><a href="./aboutBank.html">Про банк</a></li>
+                    <li><a href="./contacts">Контакти</a></li>
+                    <li><a href="./tarif.html">Тарифи</a></li>
+                    <li><a href="./convertor.html">Конвертор валют</a></li>
+                </ul>
+                <label class="switch">
+                    <img id="img1" src="https://img.icons8.com/?size=100&id=Wdnu-edbShJS&format=png&color=000000" />
+                    <input type="checkbox" id="themeToggle" onclick="changeCSS()" />
+                    <span class="slider"></span>
+                </label>
+                <script src="script.js"></script>
+            </nav>
     <h2>Конвертор валюти (Варіант 2)</h2>
 
     <label>Долари:</label>
