--- a/tarif.html
+++ b/tarif.html
@@ -122,6 +122,7 @@
                     <li><a href="./convertor.html">Конвертор валют</a></li>
                 </ul>
                 <label class="switch">
+                    <img id="img1" src="https://img.icons8.com/?size=100&id=Wdnu-edbShJS&format=png&color=000000" />
                     <input type="checkbox" id="themeToggle" onclick="changeCSS()" />
                     <span class="slider"></span>
                 </label>
