--- a/tarif.html
+++ b/tarif.html
@@ -19,14 +19,16 @@
 <style>
     .card {
         background: #fff;
-        width: 230px;
+        width: 330px;
         box-shadow: 0 5px 10px rgba(000, 000, 000, 0.5);
     }
 
     .cards {
         margin-top: 80px;
         display: flex;
-        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 20px;
+        justify-content: center;
     }
 
     .card-title {
@@ -43,9 +45,13 @@
 
     .btn,
     .btn-2 {
-        font-size: 9px;
+        max-width: 100px;
+        width: 100%;
+        font-size: 10px;
         background: #222;
         border-color: #333;
+        /* display: flex; */
+        text-align: center;
     }
 
     .btn:hover {
